--- a/Assignment8/Assignment8.vcxproj
+++ b/Assignment8/Assignment8.vcxproj
@@ -18,6 +18,12 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Student ID - deque - copy constructor.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Test Copy Constructor.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -126,12 +132,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="Student ID - deque - fill constructor.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Test Fill Constructor.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
