--- a/Assignment8/Assignment8.vcxproj.filters
+++ b/Assignment8/Assignment8.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Student ID - deque - copy constructor.h">
+    <ClInclude Include="Student ID - deque - insert.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Test Copy Constructor.cpp">
+    <ClCompile Include="Test Insert 1.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
   </ItemGroup>
