--- a/Assignment8/Assignment8.vcxproj.filters
+++ b/Assignment8/Assignment8.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Student ID - deque - assignment2.h">
+    <ClInclude Include="Student ID - deque - erase.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Test Assignment 2.cpp">
+    <ClCompile Include="Test Erase 1.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
   </ItemGroup>
